force-app/main/default/objects/Tour__c/Tour__c.object-meta.xml
<CustomObject>
    <label>Tour</label>
    <nameField>
        <displayFormat>TOUR-{000}</displayFormat>
        <label>Tour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>