force-app/main/default/objects/Tour__c/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>