force-app/main/default/objects/Tour__c/fields/Address_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Address_ZIP__c</fullName>
    <label>ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>