force-app/main/default/objects/Tour__c/fields/Agent_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Agent_Attribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To know which agent completed the tour (can be different from the Owner of the tour and must always related to a Sales agent using the user’s role)</description>
    <inlineHelpText>The agent who completed the tour</inlineHelpText>
    <label>Agent Attribution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Tours</relationshipName>
    <type>Lookup</type>
</CustomField>