force-app/main/default/objects/Tour__c/fields/Completed_Goals__c.field-meta.xml
<CustomField>
    <fullName>Completed_Goals__c</fullName>
    <label>Completed Goals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tour completed</fullName>
            </value>
            <value>
                <fullName>Proposal Generated</fullName>
            </value>
            <value>
                <fullName>Client commitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>