force-app/main/default/objects/Tour__c/fields/Completed_on__c.field-meta.xml
<CustomField>
    <fullName>Completed_on__c</fullName>
    <label>Completed on</label>
    <type>DateTime</type>
</CustomField>